# apps/e-commerce/src/app/api/models.ts
@@ -1,3 +1,4 @@
 /* tslint:disable */
 /* eslint-disable */
+export { AuthLoginInputSchema } from './models/auth-login-input-schema';
 export { AuthRegisterInputSchema } from './models/auth-register-input-schema';
