# apps/e-commerce/src/app/api/models/auth-login-input-schema.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AuthLoginInputSchema {
+  googleClientId?: string;
+  googleIdToken?: string;
+  password?: string;
+  username: string;
+}
